--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: "realm-android"
+
 android {
     namespace 'com.example.notesapp'
     compileSdk 33
@@ -29,7 +31,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'io.realm:realm-gradle-plugin:10.10.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
